# curses_csv_viewer

./: CMakeLists.txt  LICENSE  README.md  build_test.sh  changelog  cmake_build.sh  makefile
derby-db/: create.sql  derby_client.sh  ij.properties
docker/: README.md  archlinux.dockerfile  centos.dockerfile  deb.build.dockerfile  deb.install.dockerfile  fedora.dockerfile  ncurses_src.dockerfile
docs/: docker.md  header_detection.md  implementation_details.md  install_from_source.md  installation_from_sources.md  internals.md
img/: fiel_part.uxf  field_part.uxf  s_wblock.uxf  smoke_test.uxf  table_part.uxf
inc/: ncv_common.h  ncv_corners.h  ncv_curses.h  ncv_cursor.h  ncv_field.h  ncv_filter.h  ncv_footer.h  ncv_forms.h  ncv_header.h  ncv_io_loop.h  ncv_ncurses.h  ncv_parser.h  ncv_popup.h  ncv_sort.h  ncv_table.h  ncv_table_header.h  ncv_table_part.h  ncv_table_sort.h  ncv_ui_loop.h  ncv_wbuf.h  ncv_win_filter.h  ncv_win_footer.h  ncv_win_header.h  ncv_win_help.h  ncv_win_table.h  ut_utils.h
man/: README.md  ccsvv.1
res/: blocks.csv  eof_endings.csv  has_header.csv  lang.csv  line_endings.csv  sort_test.csv  test1.csv  test2_case1.csv  test2_case2.csv  test2_case3.csv  translation.csv
src/: demo_subwin.c  demo_windows.c  ncv_ccsvv.c  ncv_common.c  ncv_corners.c  ncv_curses.c  ncv_field.c  ncv_filter.c  ncv_footer.c  ncv_forms.c  ncv_header.c  ncv_io_loop.c  ncv_ncurses.c  ncv_parser.c  ncv_popup.c  ncv_sort.c  ncv_table.c  ncv_table_header.c  ncv_table_part.c  ncv_table_sort.c  ncv_test.c  ncv_ui_loop.c  ncv_wbuf.c  ncv_win_filter.c  ncv_win_footer.c  ncv_win_header.c  ncv_win_help.c  ncv_win_table.c  ut_common.c  ut_curses.c  ut_field.c  ut_filter.c  ut_parser.c  ut_sort.c  ut_table.c  ut_table_header.c  ut_table_part.c  ut_table_sort.c  ut_utils.c  ut_wbuf.c
tests/: README.md
